--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,10 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import Header from "../components/Header.astro";
-import Hero from "../components/Hero.astro";
+import Layout from "../../layouts/Layout.astro";
+import Card from "../../components/Card.astro";
+import Header from "../../components/Header.astro";
+import Hero from "../../components/Hero.astro";
 // import all markdown files in the "content" file through the Astro API and the glob method
-const allPost = await Astro.glob("../content/tips/*.md");
+// const allPost = await Astro.glob("../content/*.md");
+import { getCollection } from "astro:content";
+
+const posts = (await getCollection("tips")).sort(
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
+);
+
+console.log(posts);
 ---
 
 <Layout title="Welcome to Astro.">
@@ -41,12 +48,12 @@ const allPost = await Astro.glob("../content/tips/*.md");
 		<Hero />
 		<ul role="list" class="link-card-grid">
 			{
-				allPost.map((item) => (
+				posts.map((post) => (
 					<Card
-						title={item?.frontmatter?.title}
-						time={item.frontmatter?.pubDate}
-						tags={item.frontmatter?.tags}
-						slug="#"
+						title={post.data.title}
+						time={post.data.pubDate}
+						tags={post.data.tags}
+						slug={post.slug}
 					/>
 				))
 			}
