--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,4 +1,5 @@
 ---
+import BaseHead from "../components/BaseHead.astro";
 export interface Props {
 	title: string;
 }
@@ -7,17 +8,11 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA:Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{title}</title>
-	</head>
+<html lang="es">
+	<BaseHead title={title} description="My First Astro Page" />
 
 	<body class="h-screen">
 		<slot />
+		<style></style>
 	</body>
 </html>
-
-<style></style>
